// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`within credentialsSelectors the selectors match their snapshots for the credentialsByMappingSelector 1`] = `
Object {
  "source": Object {
    "apiKey": "TOGGLAPIKEY",
    "email": "test-user@test.com",
    "userId": "6001",
  },
  "target": Object {
    "apiKey": "CLOCKIFYAPIKEY",
    "email": "test-user@test.com",
    "userId": "clock-user-01",
  },
}
`;

exports[`within credentialsSelectors the selectors match their snapshots for the credentialsByToolNameSelector 1`] = `
Object {
  "clockify": Object {
    "apiKey": "CLOCKIFYAPIKEY",
    "email": "test-user@test.com",
    "userId": "clock-user-01",
  },
  "toggl": Object {
    "apiKey": "TOGGLAPIKEY",
    "email": "test-user@test.com",
    "userId": "6001",
  },
}
`;
